@@ -1,17 +1,0 @@
-<xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform" version="1.0">
-  <xsl:output method="xml"/>
-
-  <xsl:template match="ZoneList">
-    <xsl:copy>
-      <xsl:apply-templates>
-        <xsl:sort select="@name"/>
-      </xsl:apply-templates>
-    </xsl:copy>
-  </xsl:template>
-
-  <xsl:template match="*">
-    <xsl:copy>
-      <xsl:apply-templates/>
-    </xsl:copy>
-  </xsl:template>
-</xsl:stylesheet>
